--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.error.include-message=always
 server.error.include-binding-errors=always
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/amigoscode
+spring.profiles.active=dev
+
+spring.datasource.url=jdbc:postgresql://localhost:5431/amigoscode
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
