--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ env:
   POSTGRESQL_DB: amigoscode
   POSTGRESQL_USER: koonsland
   POSTGRESQL_PASSWORD: koonsland
-  JAVA_VERSION: 1.11
+  JAVA_VERSION: 11
 
 jobs:
   build:
@@ -28,8 +28,9 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
+      - uses: actions/setup-java@v3
         with:
+          distribution: 'adopt'
           java-version: ${{ env.JAVA_VERSION }}
       - name: Maven Clean Package
         run: |
